--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Welcome to my Github Portfolio. Here you can find a repository of all the code I have used for various analytical projects. 
+Hi, my name is James from New Zealand  - welcome to my Github Portfolio. 
+
+Here you can find a repository of all the code I have used for various analytical projects. 
